# gestola

./: .eslintrc.js  .gitignore  README.md  package.json  tsconfig.json
browser-app/: package.json  tsconfig.json  webpack.config.js
configs/: base.tsconfig.json
doubtful modules/design-flow-editor/: package.json  tsconfig.tsbuildinfo
doubtful modules/design-flow-glsp-client/: tsconfig.json  tsconfig.tsbuildinfo
doubtful modules/design-flow-glsp-client/src/: design-flow-startup.ts
doubtful modules/design-flow-glsp-server/: tsconfig.tsbuildinfo
doubtful modules/shitty-rpc/: tsconfig.tsbuildinfo
doubtfull_modules/gestola-nodes/base-node/: tsconfig.json  tsconfig.tsbuildinfo
doubtfull_modules/node-red-integration/: package.json  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
electron-app/: electron-builder.yml  package.json  tsconfig.json  vivado.jou  vivado_1896102.backup.jou  vivado_1908133.backup.jou  vivado_1939756.backup.jou  webpack.config.js
electron-app/resources/: preload.html
electron-app/resources/templates/default/system/: CMakeLists.txt
electron-app/scripts/: theia-electron-main.js  update-checksum.ts
gestola-core/: package.json
gestola-core/i18n/: nls.en.json  nls.ru.json
gestola-core/src/backend/: core.ts  (+4 more)
gestola-core/styles/: index.css
scripts/: df-base-replacer.ts  download-plugins.ts  local-node-red.ts  plugin-update.ts  string-replacer-test.ts  string-replacer.ts  string-replacer2.ts  string-replacer3.ts  test.ts  update-theia-version.ts  verilator-download.ts
scripts/test/: kek.json  slack-parser.ts  slack.txt
(+79 files in other folders)
